--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
     - name: step 1
       run: echo "This is step 1"
-    - id: step1
+      id: step1
     
   example_job2:
     runs-on: ubuntu latest
     needs: example_job1
     steps:
-      - name: Step 2
-        run: echo "This is step 2 and the output from Step 1 is ${{ steps.step1.outputs.myOutput }}"
+    - name: Step2
+      run: echo "This is step 2 and the output from Step 1 is ${{ steps.step1.outputs.myOutput }}"
       
