--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -6,15 +6,15 @@ jobs:
   example_job:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
       
-    - name: Run example action
-      id: example_action_step
-      uses: ./.github/actions/example-action
-      with:
-        input1: 'Input 1 value'
-        input2: 'Input 2 value'
+      - name: Run example action
+        id: example_action_step
+        uses: ./.github/actions/example-action
+        with:
+          input1: 'Input 1 value'
+          input2: 'Input 2 value'
       
-    - name: Display output
-      run: echo "Output 1 ${{ steps.example_action_step.outputs.output1 }}"
+      - name: Display output
+        run: echo "Output 1: ${{ steps.example_action_step.outputs.output1 }}"
