--- a/.github/actions/example-action/action.yml
+++ b/.github/actions/example-action/action.yml
@@ -1,6 +1,6 @@
-name: Example Action
+# .github/actions/example-action/action.yml
+name: 'Example Action'
 description: 'An example action that demonstrates inputs and outputs'
-
 inputs:
   input1:
     description: 'Input 1'
@@ -9,11 +9,9 @@ inputs:
     description: 'Input 2'
     required: false
     default: 'default_value'
-    
 outputs:
   output1:
     description: 'Output 1'
-    
 runs:
   using: 'composite'
   steps:
