--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -17,4 +17,4 @@ jobs:
           input2: 'Input 2 value'
       
       - name: Display output
-        run: echo "Output 1: ${{ steps.example_action_step.outputs.output1 }}"
+        run: echo "Output 1 ${{ steps.example_action_step.outputs.output1 }}"
