--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -11,7 +11,7 @@ jobs:
       
       - name: Run example action
         id: example_action_step
-        uses: ./.github/actions/example-action
+        uses: actions/checkout@v2
         with:
           input1: 'Input 1 value'
           input2: 'Input 2 value'
