--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -11,7 +11,7 @@ jobs:
       
       - name: Run example action
         id: example_action_step
-        uses: ./github-actions-test/.github/actions/example-actions/
+        uses: actions/example-actions@v1
         with:
           input1: 'Input 1 value'
           input2: 'Input 2 value'
