--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       
       - name: Run example action
         id: example_action_step
-        uses: gabrielvega-a/github-actions-test@main
+        uses: ./.github/actions/local-action
         with:
           input1: 'Input 1 value'
           input2: 'Input 2 value'
